--- a/style.css
+++ b/style.css
@@ -47,3 +47,25 @@ img {
   margin-right: auto;
   width: 50%;
 }
+
+@media only screen and (max-width: 800px) {
+  .head{
+    font-size: 35px;
+  }
+  .body{
+    display: flex;
+  }
+  .btn{
+    flex-direction: column;
+    align-items: center;
+    margin: 20px;
+    width: 200px;
+    height: 125px;
+  }
+  img{
+    height: 300px;
+    width: 300px;
+    object-fit: cover;
+    align-content: center;
+  }
+}
