--- a/style.css
+++ b/style.css
@@ -21,23 +21,26 @@ body {
 .btn {
   text-align: center;
   margin: 20px;
+  padding: 10px;
   font-size: 30px;
   background-color: #456F38;
   color: white;
   font-family: 'Raleway', sans-serif;
-  width: 200px;
+  width: 150px;
   height: auto;
   align-items: center;
 }
 
 h3 {
   text-align: center;
+  width: 100%;
+  font-size: 50px;
 }
 
 p {
   text-align: center;
   font-family: 'Indie Flower', cursive;
-  font-size: 27px;
+  font-size: 30px;
 }
 
 img {
@@ -45,24 +48,34 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: 500px;
+  height: 500px;
 }
 
-@media only screen and (max-width: 800px) {
-  .head{
-    font-size: 35px;
+@media screen and (max-width: 600px) {
+  h1 {
+    font-size: 45px;
   }
-  .body{
+  h3{
+    width: 100%;
+    height: auto;
+    font-size: 38px;
+  }
+  .align{
+    align-items: center;
     display: flex;
   }
-  .btn{
+  .btn {
     flex-direction: column;
-    align-items: center;
     margin: 20px;
-    width: 200px;
-    height: 125px;
+    width: 50%;
+    height: auto;
   }
-  img{
+  p {
+    font-size: 20px;
+    text-align: center;
+  }
+  img {
     height: 300px;
     width: 300px;
     object-fit: cover;
